<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailActivity">

        <ImageView
            android:id="@+id/profile_image"
            style="@style/DetailImageStyle"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/detail_title"
            style="@style/DetailTitleStyle"
            android:layout_below="@+id/profile_image"
            android:text="@string/title_detail" />

        <TextView
            android:id="@+id/overview"
            style="@style/SubTitleDetailDescriptionStyle"
            android:text="@string/overview" />

        <TextView
            android:id="@+id/detail_description"
            style="@style/DetailDescriptionStyle"
            android:layout_below="@+id/overview"
            android:text="@string/description_detail" />

        <TextView
            android:id="@+id/event_date"
            style="@style/SubTitleDetailTimeDescriptionStyle"
            android:layout_below="@+id/detail_description"
            android:text="@string/event_date" />

        <TextView
            android:id="@+id/detail_time"
            style="@style/DetailTwoDescriptionStyle"
            android:layout_below="@+id/event_date"
            android:text="@string/description_detail" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_time"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/share" />

    </RelativeLayout>
</ScrollView>