<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:src="@drawable/ic_profile"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/about_name"
            style="@style/AboutNameStyle"
            android:layout_below="@+id/profile_image"
            android:text="@string/my_name" />

        <TextView
            style="@style/AboutEmailStyle"
            android:layout_below="@+id/about_name"
            android:text="@string/my_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="470dp"
            android:layout_marginEnd="20dp"
            android:text="@string/About_Error"
            android:textStyle="italic" />

    </RelativeLayout>
</ScrollView>
